Sets base URL for homepage

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <h5 class="component-selector__subtitle">Version 1.12</h5></div><ul class="subnavigation__list">
                 
                 <li class="subnavigation__list-item subnavigation__list-item--active">
-                    <a class="subnavigation__link" href=/>Programmer's Reference Guide</a>
+                    <a class="subnavigation__link" href=https://froschdesign.github.io/zf1-documentation/>Programmer's Reference Guide</a>
                 </li>
             </ul></div></div>
 
