--- a/performance.html
+++ b/performance.html
@@ -109,7 +109,7 @@
 </nav></div>
 <div class="col-md-3 col-xs-12 sidebar">
 <div class="subnavigation"><div class="component-selector">
-<h5 class="component-selector__subtitle">Version 1.12</h5></div><h4 class="subnavigation__title"><a href=/>Programmer's Reference Guide</a></h4><ul class="subnavigation__list">
+<h5 class="component-selector__subtitle">Version 1.12</h5></div><h4 class="subnavigation__title"><a href=https://froschdesign.github.io/zf1-documentation/>Programmer's Reference Guide</a></h4><ul class="subnavigation__list">
                 
                 
                 <li class="subnavigation__list-item">
