Fixes link to index page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <nav>
     <ul class="page-nav hidden-print">
-        <li class="page-nav__item"><a rel="prev" class="page-nav__link page-nav__link--prev" href="manual.html">
+        <li class="page-nav__item"><a rel="prev" class="page-nav__link page-nav__link--prev" href="https://froschdesign.github.io/zf1-documentation/">
                 <i class="fa fa-chevron-left"></i> Previous
             </a></li>
         <li class="page-nav__item"><a rel="next" class="page-nav__link page-nav__link--next" href="introduction.html">
@@ -126,7 +126,7 @@
 <h5 class="component-selector__subtitle">Version 1.12</h5></div><ul class="subnavigation__list">
                 
                 <li class="subnavigation__list-item subnavigation__list-item--active">
-                    <a class="subnavigation__link" href=https://froschdesign.github.io/zf1-documentation/>Programmer's Reference Guide</a>
+                    <a class="subnavigation__link" href="https://froschdesign.github.io/zf1-documentation/">Programmer's Reference Guide</a>
                 </li>
             </ul></div></div>
 
