--- a/introduction.html
+++ b/introduction.html
@@ -90,7 +90,7 @@
             </div>
             <nav>
     <ul class="page-nav hidden-print">
-        <li class="page-nav__item"><a rel="prev" class="page-nav__link page-nav__link--prev" href="manual.html">
+        <li class="page-nav__item"><a rel="prev" class="page-nav__link page-nav__link--prev" href="https://froschdesign.github.io/zf1-documentation/">
                 <i class="fa fa-chevron-left"></i> Previous
             </a></li>
         <li class="page-nav__item"><a rel="next" class="page-nav__link page-nav__link--next" href="introduction.overview.html">
@@ -100,7 +100,7 @@
 </nav></div>
 <div class="col-md-3 col-xs-12 sidebar">
 <div class="subnavigation"><div class="component-selector">
-<h5 class="component-selector__subtitle">Version 1.12</h5></div><h4 class="subnavigation__title"><a href=https://froschdesign.github.io/zf1-documentation/>Programmer's Reference Guide</a></h4><ul class="subnavigation__list">
+<h5 class="component-selector__subtitle">Version 1.12</h5></div><h4 class="subnavigation__title"><a href="https://froschdesign.github.io/zf1-documentation/">Programmer's Reference Guide</a></h4><ul class="subnavigation__list">
                 
                 
                 <li class="subnavigation__list-item subnavigation__list-item--active">
